# RustPython

bytecode/: Cargo.toml
bytecode/src/: lib.rs
compiler/: Cargo.toml
parser/: Cargo.toml
parser/src/: lexer.rs  python.lalrpop
vm/: Cargo.toml
vm/src/: lib.rs
vm/src/builtins/: memory.rs
vm/src/stdlib/: math.rs
