[package]
name = "rustpython-bytecode"
description = "RustPython specific bytecode."
version = "0.1.2"
authors = ["RustPython Team"]
edition = "2018"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"

[features]
std = ["bstr/std", "itertools/use_std"]
default = ["std"]

[dependencies]
bincode =  "1.1"
bitflags = "1.1"
lz4_flex = "0.6"
num-bigint = { version = "0.3", default-features = false, features = ["serde"] }
num-complex = { version = "0.3", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
itertools = { version = "0.9", default-features = false }
bstr = { version = "0.2", default-features = false }
